# ai-rules

./: CLAUDE.md  README.md  pyproject.toml
airules/: __init__.py  engine.py  facts.py  fields.py  observers.py  predicates.py  rules.py
examples/: entity_resolution.py  llm_fallback.py  llm_fallback_threads.py  observed_merge_gate.py  pr_triage.py  traffic_lights.py
tests/: test_defaults.py  test_e2e_api.py  test_embedded.py  test_engine.py  test_facts.py  test_fields.py  test_observer.py  test_predicates.py  test_rules.py
